[package]
name = "tdn_permission"
version = "0.2.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Multiple permissioned / permissionless libraries for TDN."
repository = "https://github.com/cypherlink/TDN-Permission"
keywords = ["tdn", "permissioned", "permissionless", "distributed", "blockchain"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
async-channel = "1.4"
#tdn_types = "0.2"
tdn_types = { path = "../TDN/types" } # DEV

[dev-dependencies]
tdn = "0.2"
smol = "1"
