[package]
name = "tdn-permission"
version = "0.3.0"
authors = ["Contact <contact@cypherlink.io>"]
edition = "2018"
readme = "README.md"
description = "Multiple permissioned / permissionless libraries for TDN."
repository = "https://github.com/cypherlink/TDN-Permission"
keywords = ["tdn", "permissioned", "permissionless", "distributed", "blockchain"]
license = "MIT/Apache-2.0"

[dependencies]
serde = "1"
async-channel = "1.5"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }
tdn-types = { git = "https://github.com/cypherlink/TDN", branch="main" }

[dev-dependencies]
smol = "1"
tdn = { git = "https://github.com/cypherlink/TDN", branch="main" }
